--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0"
         />
-        <title>world-gist</title>
+        <title>World Gist</title>
     </head>
     <body>
         <div id="root"></div>
